--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.0",
+    "react-router-hash-link": "^2.4.3",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
