--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.14.4",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
